--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body{
     height: 100vh;
 }
 
-.cards{
+.cards, .attacks-cards{
     display: flex;
     gap: 10px;
 }
@@ -59,4 +59,71 @@ body{
 
 input{
     display: none;
+}
+
+input:checked + label{
+    background-color: #256D85;
+}
+
+#select-attack{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.button-attack{
+    background-color: #2B4865;
+    box-sizing: border-box;
+    padding: 10px;
+    border-radius: 20px;
+    border-color: transparent;
+    width: 100px;
+    color: white;
+    font-family: 'Comfortaa', cursive;
+}
+
+#messages{
+    width: 180px;
+    padding: 20px;
+    margin-top: 20px;
+    border-radius: 20px;
+    background-color: #8FE3CF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Comfortaa', cursive;
+    
+}
+
+#button-restart{
+    border: 2px solid white;
+    color: #002B5B;
+    border-radius: 20px;
+    background-color: #8FE3CF;
+}
+
+.attacks{
+    display: grid;
+    grid-template-columns: 100px 100px;
+}
+
+#player-lives, #enemy-lives{
+    font-size: 32px;
+    margin-bottom: 0;
+}
+
+.player-attacks, .enemy-attacks{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
+
+@media (max-width: 360px){
+    .cards, .attacks-cards{
+        flex-direction: column;
+    }
 }
